// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a Title control with bad layout 1`] = `
<Title
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  layout={9999}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={true}
  notheme={false}
  notooltip={false}
  obj="Title"
  onClick={[Function]}
  onUpdate={[Function]}
  padding={null}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="Test label text"
  tooltip={null}
  top={null}
  useedit={false}
  visible={true}
  widget={null}
  width={null}
  xcss={null}
/>
`;

exports[`Test creation of a Title control with bad layout 2`] = `
<Title
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  layout={9999}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={true}
  notheme={false}
  notooltip={false}
  obj="Title"
  onClick={[Function]}
  onUpdate={[Function]}
  padding={null}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="Test label text"
  tooltip={null}
  top={null}
  useedit={false}
  visible={true}
  widget={null}
  width={null}
  xcss={null}
/>
`;

exports[`Test creation of a Title control with default props 1`] = `
<Wrapper
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className="test-class"
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  layout={5}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={true}
  notheme={false}
  notooltip={false}
  obj="Title"
  onClick={[Function]}
  onError={[Function]}
  onUpdate={[Function]}
  padding={null}
  reset={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="Test label text"
  tooltip={null}
  top={null}
  useedit={false}
  visible={true}
  widget={null}
  width={null}
  xcss={null}
>
  <Title__TitleView
    className="ui-title-bar test-class"
    disabled={false}
    layout={5}
    sizing="normal"
    style={Object {}}
    visible={true}
  >
    <Title__StyledLabel
      backgroundColor={null}
      borderColor={null}
      bottom={null}
      className="ui-title"
      color={null}
      contentEditable={false}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage={null}
      focus={false}
      height={null}
      id={null}
      layout={5}
      left={null}
      location="none"
      minHeight={null}
      minWidth={null}
      noedit={false}
      nohover={false}
      noripple={true}
      notheme={false}
      notooltip={false}
      obj="Title"
      onClick={[Function]}
      onUpdate={[Function]}
      padding={null}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="Test label text"
      theme={null}
      title="Test label text"
      tooltip={null}
      top={null}
      useedit={false}
      visible={true}
      widget={null}
      width={null}
      xcss={
        Array [
          "text-align:left;flex:5;",
        ]
      }
    />
  </Title__TitleView>
</Wrapper>
`;

exports[`Test creation of a Title control with even layout 1`] = `
<Wrapper
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  layout={1}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={true}
  notheme={false}
  notooltip={false}
  obj="Title"
  onClick={[Function]}
  onError={[Function]}
  onUpdate={[Function]}
  padding={null}
  reset={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="Test label text"
  tooltip={null}
  top={null}
  useedit={false}
  visible={true}
  widget="widget"
  width={null}
  xcss={null}
>
  <Title__TitleView
    className="ui-title-bar"
    disabled={false}
    layout={1}
    sizing="normal"
    style={Object {}}
    visible={true}
  >
    <Title__StyledLabel
      backgroundColor={null}
      borderColor={null}
      bottom={null}
      className="ui-title"
      color={null}
      contentEditable={false}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage={null}
      focus={false}
      height={null}
      id={null}
      layout={1}
      left={null}
      location="none"
      minHeight={null}
      minWidth={null}
      noedit={false}
      nohover={false}
      noripple={true}
      notheme={false}
      notooltip={false}
      obj="Title"
      onClick={[Function]}
      onUpdate={[Function]}
      padding={null}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="Test label text"
      theme={null}
      title="Test label text"
      tooltip={null}
      top={null}
      useedit={false}
      visible={true}
      widget="widget"
      width={null}
      xcss={
        Array [
          "text-align:left;flex:1;",
        ]
      }
    />
    <Title__StyledWidget
      backgroundColor={null}
      borderColor={null}
      bottom={null}
      className="ui-title-widget"
      color={null}
      contentEditable={false}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage={null}
      focus={false}
      height={null}
      id={null}
      layout={1}
      left={null}
      location="none"
      minHeight={null}
      minWidth={null}
      noedit={false}
      nohover={false}
      noripple={true}
      notheme={false}
      notooltip={false}
      obj="Title"
      onClick={[Function]}
      padding={null}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      theme={null}
      title="Test label text"
      tooltip={null}
      top={null}
      useedit={false}
      visible={true}
      widget="widget"
      width={null}
      xcss={
        Array [
          "text-align:right;flex:1;",
        ]
      }
    >
      widget
    </Title__StyledWidget>
  </Title__TitleView>
</Wrapper>
`;

exports[`Test creation of a Title control with no layout 1`] = `
<Wrapper
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  layout={6}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={true}
  notheme={false}
  notooltip={false}
  obj="Title"
  onClick={[Function]}
  onError={[Function]}
  onUpdate={[Function]}
  padding={null}
  reset={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="Test label text"
  tooltip={null}
  top={null}
  useedit={false}
  visible={true}
  widget={null}
  width={null}
  xcss={null}
>
  <Title__TitleView
    className="ui-title-bar"
    disabled={false}
    layout={6}
    sizing="normal"
    style={Object {}}
    visible={true}
  >
    <Title__StyledLabel
      backgroundColor={null}
      borderColor={null}
      bottom={null}
      className="ui-title"
      color={null}
      contentEditable={false}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage={null}
      focus={false}
      height={null}
      id={null}
      layout={6}
      left={null}
      location="none"
      minHeight={null}
      minWidth={null}
      noedit={false}
      nohover={false}
      noripple={true}
      notheme={false}
      notooltip={false}
      obj="Title"
      onClick={[Function]}
      onUpdate={[Function]}
      padding={null}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="Test label text"
      theme={null}
      title="Test label text"
      tooltip={null}
      top={null}
      useedit={false}
      visible={true}
      widget={null}
      width={null}
      xcss={
        Array [
          "text-align:left;flex:1;",
        ]
      }
    />
  </Title__TitleView>
</Wrapper>
`;

exports[`Test creation of a Title control with quarter layout 1`] = `
<Wrapper
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  layout={0}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={true}
  notheme={false}
  notooltip={false}
  obj="Title"
  onClick={[Function]}
  onError={[Function]}
  onUpdate={[Function]}
  padding={null}
  reset={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="Test label text"
  tooltip={null}
  top={null}
  useedit={false}
  visible={true}
  widget="widget"
  width={null}
  xcss={null}
>
  <Title__TitleView
    className="ui-title-bar"
    disabled={false}
    layout={0}
    sizing="normal"
    style={Object {}}
    visible={true}
  >
    <Title__StyledLabel
      backgroundColor={null}
      borderColor={null}
      bottom={null}
      className="ui-title"
      color={null}
      contentEditable={false}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage={null}
      focus={false}
      height={null}
      id={null}
      layout={0}
      left={null}
      location="none"
      minHeight={null}
      minWidth={null}
      noedit={false}
      nohover={false}
      noripple={true}
      notheme={false}
      notooltip={false}
      obj="Title"
      onClick={[Function]}
      onUpdate={[Function]}
      padding={null}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="Test label text"
      theme={null}
      title="Test label text"
      tooltip={null}
      top={null}
      useedit={false}
      visible={true}
      widget="widget"
      width={null}
      xcss={
        Array [
          "text-align:left;flex:1;",
        ]
      }
    />
    <Title__StyledWidget
      backgroundColor={null}
      borderColor={null}
      bottom={null}
      className="ui-title-widget"
      color={null}
      contentEditable={false}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage={null}
      focus={false}
      height={null}
      id={null}
      layout={0}
      left={null}
      location="none"
      minHeight={null}
      minWidth={null}
      noedit={false}
      nohover={false}
      noripple={true}
      notheme={false}
      notooltip={false}
      obj="Title"
      onClick={[Function]}
      padding={null}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      theme={null}
      title="Test label text"
      tooltip={null}
      top={null}
      useedit={false}
      visible={true}
      widget="widget"
      width={null}
      xcss={
        Array [
          "text-align:right;flex:3;",
        ]
      }
    >
      widget
    </Title__StyledWidget>
  </Title__TitleView>
</Wrapper>
`;

exports[`Test creation of a Title control with stacked layout 1`] = `
<Wrapper
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  layout={4}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={true}
  notheme={false}
  notooltip={false}
  obj="Title"
  onClick={[Function]}
  onError={[Function]}
  onUpdate={[Function]}
  padding={null}
  reset={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="Test label text"
  tooltip={null}
  top={null}
  useedit={false}
  visible={true}
  widget="widget"
  width={null}
  xcss={null}
>
  <Title__TitleView
    className="ui-title-bar"
    disabled={false}
    layout={4}
    sizing="normal"
    style={Object {}}
    visible={true}
  >
    <Title__StyledLabel
      backgroundColor={null}
      borderColor={null}
      bottom={null}
      className="ui-title"
      color={null}
      contentEditable={false}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage={null}
      focus={false}
      height={null}
      id={null}
      layout={4}
      left={null}
      location="none"
      minHeight={null}
      minWidth={null}
      noedit={false}
      nohover={false}
      noripple={true}
      notheme={false}
      notooltip={false}
      obj="Title"
      onClick={[Function]}
      onUpdate={[Function]}
      padding={null}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="Test label text"
      theme={null}
      title="Test label text"
      tooltip={null}
      top={null}
      useedit={false}
      visible={true}
      widget="widget"
      width={null}
      xcss={
        Array [
          "display:block;",
        ]
      }
    />
    <Title__StyledWidget
      backgroundColor={null}
      borderColor={null}
      bottom={null}
      className="ui-title-widget"
      color={null}
      contentEditable={false}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage={null}
      focus={false}
      height={null}
      id={null}
      layout={4}
      left={null}
      location="none"
      minHeight={null}
      minWidth={null}
      noedit={false}
      nohover={false}
      noripple={true}
      notheme={false}
      notooltip={false}
      obj="Title"
      onClick={[Function]}
      padding={null}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      theme={null}
      title="Test label text"
      tooltip={null}
      top={null}
      useedit={false}
      visible={true}
      widget="widget"
      width={null}
      xcss={
        Array [
          "display:block;",
        ]
      }
    >
      widget
    </Title__StyledWidget>
  </Title__TitleView>
</Wrapper>
`;

exports[`Test creation of a Title control with thirds layout 1`] = `
<Wrapper
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  layout={3}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={true}
  notheme={false}
  notooltip={false}
  obj="Title"
  onClick={[Function]}
  onError={[Function]}
  onUpdate={[Function]}
  padding={null}
  reset={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="Test label text"
  tooltip={null}
  top={null}
  useedit={false}
  visible={true}
  widget="widget"
  width={null}
  xcss={null}
>
  <Title__TitleView
    className="ui-title-bar"
    disabled={false}
    layout={3}
    sizing="normal"
    style={Object {}}
    visible={true}
  >
    <Title__StyledLabel
      backgroundColor={null}
      borderColor={null}
      bottom={null}
      className="ui-title"
      color={null}
      contentEditable={false}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage={null}
      focus={false}
      height={null}
      id={null}
      layout={3}
      left={null}
      location="none"
      minHeight={null}
      minWidth={null}
      noedit={false}
      nohover={false}
      noripple={true}
      notheme={false}
      notooltip={false}
      obj="Title"
      onClick={[Function]}
      onUpdate={[Function]}
      padding={null}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="Test label text"
      theme={null}
      title="Test label text"
      tooltip={null}
      top={null}
      useedit={false}
      visible={true}
      widget="widget"
      width={null}
      xcss={
        Array [
          "text-align:left;flex:1;",
        ]
      }
    />
    <Title__StyledWidget
      backgroundColor={null}
      borderColor={null}
      bottom={null}
      className="ui-title-widget"
      color={null}
      contentEditable={false}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage={null}
      focus={false}
      height={null}
      id={null}
      layout={3}
      left={null}
      location="none"
      minHeight={null}
      minWidth={null}
      noedit={false}
      nohover={false}
      noripple={true}
      notheme={false}
      notooltip={false}
      obj="Title"
      onClick={[Function]}
      padding={null}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      theme={null}
      title="Test label text"
      tooltip={null}
      top={null}
      useedit={false}
      visible={true}
      widget="widget"
      width={null}
      xcss={
        Array [
          "text-align:right;flex:2;",
        ]
      }
    >
      widget
    </Title__StyledWidget>
  </Title__TitleView>
</Wrapper>
`;

exports[`Test creation of a Title control with threequarter layout 1`] = `
<Wrapper
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  layout={2}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={true}
  notheme={false}
  notooltip={false}
  obj="Title"
  onClick={[Function]}
  onError={[Function]}
  onUpdate={[Function]}
  padding={null}
  reset={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="Test label text"
  tooltip={null}
  top={null}
  useedit={false}
  visible={true}
  widget="widget"
  width={null}
  xcss={null}
>
  <Title__TitleView
    className="ui-title-bar"
    disabled={false}
    layout={2}
    sizing="normal"
    style={Object {}}
    visible={true}
  >
    <Title__StyledLabel
      backgroundColor={null}
      borderColor={null}
      bottom={null}
      className="ui-title"
      color={null}
      contentEditable={false}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage={null}
      focus={false}
      height={null}
      id={null}
      layout={2}
      left={null}
      location="none"
      minHeight={null}
      minWidth={null}
      noedit={false}
      nohover={false}
      noripple={true}
      notheme={false}
      notooltip={false}
      obj="Title"
      onClick={[Function]}
      onUpdate={[Function]}
      padding={null}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="Test label text"
      theme={null}
      title="Test label text"
      tooltip={null}
      top={null}
      useedit={false}
      visible={true}
      widget="widget"
      width={null}
      xcss={
        Array [
          "text-align:left;flex:3;",
        ]
      }
    />
    <Title__StyledWidget
      backgroundColor={null}
      borderColor={null}
      bottom={null}
      className="ui-title-widget"
      color={null}
      contentEditable={false}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage={null}
      focus={false}
      height={null}
      id={null}
      layout={2}
      left={null}
      location="none"
      minHeight={null}
      minWidth={null}
      noedit={false}
      nohover={false}
      noripple={true}
      notheme={false}
      notooltip={false}
      obj="Title"
      onClick={[Function]}
      padding={null}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      theme={null}
      title="Test label text"
      tooltip={null}
      top={null}
      useedit={false}
      visible={true}
      widget="widget"
      width={null}
      xcss={
        Array [
          "text-align:right;flex:1;",
        ]
      }
    >
      widget
    </Title__StyledWidget>
  </Title__TitleView>
</Wrapper>
`;

exports[`Test disabling the Title control 1`] = `
<Title
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={true}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  layout={5}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={true}
  notheme={false}
  notooltip={false}
  obj="Title"
  onClick={[Function]}
  onUpdate={[Function]}
  padding={null}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="Test label text"
  tooltip={null}
  top={null}
  useedit={false}
  visible={true}
  widget={null}
  width={null}
  xcss={null}
/>
`;

exports[`Test making the Title control invisible 1`] = `
<Title
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  layout={5}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={true}
  notheme={false}
  notooltip={false}
  obj="Title"
  onClick={[Function]}
  onUpdate={[Function]}
  padding={null}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="Test label text"
  tooltip={null}
  top={null}
  useedit={false}
  visible={false}
  widget={null}
  width={null}
  xcss={null}
/>
`;

exports[`Test retrieval of Title props object 1`] = `
Object {
  "backgroundColor": null,
  "borderColor": null,
  "bottom": null,
  "children": null,
  "className": null,
  "color": null,
  "contentEditable": false,
  "controlled": true,
  "direction": "right",
  "disabled": false,
  "err": null,
  "errorMessage": null,
  "focus": false,
  "height": null,
  "id": null,
  "layout": 5,
  "left": null,
  "location": "none",
  "minHeight": null,
  "minWidth": null,
  "noedit": false,
  "nohover": false,
  "noripple": true,
  "notheme": false,
  "notooltip": false,
  "obj": "Title",
  "onClick": [Function],
  "onUpdate": [Function],
  "padding": null,
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "theme": null,
  "tooltip": null,
  "top": null,
  "useedit": false,
  "visible": true,
  "widget": null,
  "width": null,
  "xcss": null,
}
`;

exports[`Test retrieval of Title props object 2`] = `
Object {
  "children": null,
  "classes": b {
    "_classes": Map {
      "ui-title-bar" => true,
    },
    "_clstr": "",
    "_delimiter": " ",
    "_dirty": true,
    "_obj": null,
    "delete": [Function],
    "reset": [Function],
  },
  "sizing": "normal",
  "style": Object {},
}
`;
